objects/Communication_Template__c.object
<CustomObject>
    <fields>
        <fullName>Display_From__c</fullName>
        <label>Display From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_From__c</fullName>
        <label>Email From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Meeting_Line__c</fullName>
        <label>Post Meeting Line</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Meeting_Line__c</fullName>
        <label>Pre Meeting Line</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_HTML__c</fullName>
        <label>Section HTML</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template_Color__c</fullName>
        <label>Template Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_HTML__c</fullName>
        <label>Template HTML</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template_Image__c</fullName>
        <label>Template Image</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Communication Template</label>
    <nameField>
        <label>Communication Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communication Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>